# bikeheadvr

./: .gitignore  PLAN.md  README.md  bikeheadvr.spec  main.py  pyproject.toml
.github/workflows/: release.yml
bikeheadvr/: __init__.py  config.py  vr_runtime.py
scripts/: generate_icon.py  smoke_import.py
src/bikeheadvr/: app.py  calibration.py  config.py  desktop.py  desktop_settings.py  gpu_textures.py  interaction.py  overlay_ui.py  pedal_estimation.py  vr_runtime.py  vrchat_osc.py
tests/: test_desktop_settings.py
