[project]
name = "bikeheadvr"
version = "0.1.0"
description = "SteamVR overlay prototype for controllerless VRChat bike locomotion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openvr>=2.12.1401",
    "pillow>=12.1.1",
    "pyglet>=2.1.13",
    "python-osc>=1.9.3",
]

[project.scripts]
bikeheadvr = "bikeheadvr.app:main"

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "bikeheadvr",
]
